add examples